Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/apps/_xfce.scss
+++ b/gtk-3.0/apps/_xfce.scss
@@ -69,11 +69,6 @@
   -gtk-icon-transform:scale(0.72);
 }
 
-scrolledwindow.sidebar treeview.view {
-  background: darken($_sidebar_color, 2%);
-  padding: 1.5px;
-}
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar > button.toggle.path-bar-button, .thunar toolbar .path-bar-button {
   margin-top: 7px;
@@ -90,10 +85,12 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
 }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view {
+.thunar scrolledwindow.sidebar treeview.view {
+  background: darken($_sidebar_color, 2%);
+  padding: 1.5px;
 
   &:hover {
-    background: darken($_sidebar_color, 3%);
+    background: lighten($_sidebar_color, 5%);
   }
   &:selected {
     @include button(active-header);
